@@ -18,18 +18,19 @@
 package org.jackhuang.hmcl.modpack.curse;
 
 import com.google.gson.JsonParseException;
+import org.jackhuang.hmcl.addon.RemoteAddon;
+import org.jackhuang.hmcl.addon.mod.ModManager;
 import org.jackhuang.hmcl.addon.repository.CurseForgeRemoteAddonRepository;
 import org.jackhuang.hmcl.download.DefaultDependencyManager;
 import org.jackhuang.hmcl.download.DownloadProvider;
-import org.jackhuang.hmcl.game.DefaultGameRepository;
-import org.jackhuang.hmcl.addon.mod.ModManager;
-import org.jackhuang.hmcl.game.GameInstanceID;
+import org.jackhuang.hmcl.game.DefaultGameInstance;
 import org.jackhuang.hmcl.modpack.ModpackCompletionException;
-import org.jackhuang.hmcl.addon.RemoteAddon;
 import org.jackhuang.hmcl.task.FileDownloadTask;
 import org.jackhuang.hmcl.task.Task;
 import org.jackhuang.hmcl.util.StringUtils;
 import org.jackhuang.hmcl.util.gson.JsonUtils;
+import org.jetbrains.annotations.NotNullByDefault;
+import org.jetbrains.annotations.Nullable;
 
 import java.io.FileNotFoundException;
 import java.io.IOException;
@@ -37,60 +38,85 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Collection;
 import java.util.List;
+import java.util.Objects;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.jackhuang.hmcl.util.logging.Logger.LOG;
 
-/**
- * Complete the CurseForge version.
- *
- * @author huangyuhui
- */
+/// Completes missing files for an installed CurseForge modpack.
+@NotNullByDefault
 public final class CurseCompletionTask extends Task<Void> {
 
+    /// The dependency manager used to resolve and download remote files.
     private final DefaultDependencyManager dependency;
-    private final DefaultGameRepository repository;
-    private final ModManager modManager;
-    private final GameInstanceID instanceId;
-    private CurseManifest manifest;
-    private List<Task<?>> dependencies;
 
+    /// The fixed registered instance completed by this task.
+    private final DefaultGameInstance instance;
+
+    /// The mod manager associated with [#instance].
+    private final ModManager modManager;
+
+    /// The manifest supplied by the caller or loaded from disk, if available.
+    private @Nullable CurseManifest manifest;
+
+    /// Keys of optional files the user chose not to install; `null` means install all.
+    private @Nullable Set<String> excludedFiles;
+
+    /// Download tasks produced during [#execute()].
+    private List<Task<?>> dependencies = List.of();
+
+    /// Whether every manifest file name could be resolved.
     private final AtomicBoolean allNameKnown = new AtomicBoolean(true);
+
+    /// The number of manifest entries processed in the current phase.
     private final AtomicInteger finished = new AtomicInteger(0);
+
+    /// Whether a manifest entry refers to a deleted remote file.
     private final AtomicBoolean notFound = new AtomicBoolean(false);
 
-    /**
-     * Constructor.
-     *
-     * @param dependencyManager the dependency manager.
-     * @param instanceId           the existent and physical version.
-     */
-    public CurseCompletionTask(DefaultDependencyManager dependencyManager, GameInstanceID instanceId) {
-        this(dependencyManager, instanceId, null);
+    /// Creates a task that completes the installed CurseForge modpack.
+    ///
+    /// @param dependencyManager the dependency manager
+    /// @param instance          the registered instance to complete
+    public CurseCompletionTask(DefaultDependencyManager dependencyManager, DefaultGameInstance instance) {
+        this(dependencyManager, instance, null, null);
     }
 
-    /**
-     * Constructor.
-     *
-     * @param dependencyManager the dependency manager.
-     * @param instanceId           the existent and physical version.
-     * @param manifest          the CurseForgeModpack manifest.
-     */
-    public CurseCompletionTask(DefaultDependencyManager dependencyManager, GameInstanceID instanceId, CurseManifest manifest) {
+    /// Creates a task that completes the installed CurseForge modpack using an optional manifest.
+    ///
+    /// @param dependencyManager the dependency manager
+    /// @param instance          the registered instance to complete
+    /// @param manifest          the CurseForge manifest, or `null` to read it from disk
+    /// @param excludedFiles     keys of optional files the user chose not to install; `null` means install all.
+    ///                          When non-null, must not contain `null` elements.
+    public CurseCompletionTask(
+            DefaultDependencyManager dependencyManager,
+            DefaultGameInstance instance,
+            @Nullable CurseManifest manifest,
+            @Nullable Set<String> excludedFiles) {
+        dependencyManager.validateGameInstance(instance);
         this.dependency = dependencyManager;
-        this.repository = dependencyManager.getGameRepository();
-        this.modManager = repository.getModManager(instanceId);
-        this.instanceId = instanceId;
+        this.instance = instance;
+        this.modManager = instance.getModManager();
         this.manifest = manifest;
+        this.excludedFiles = excludedFiles == null ? null : Set.copyOf(excludedFiles);
 
         if (manifest == null)
             try {
-                Path manifestFile = repository.getInstanceRoot(instanceId).resolve("manifest.json");
+                Path root = instance.getInstanceRoot();
+                Path manifestFile = root.resolve("manifest.json");
                 if (Files.exists(manifestFile))
                     this.manifest = JsonUtils.fromJsonFile(manifestFile, CurseManifest.class);
+                Path excludedFile = root.resolve("excluded.json");
+                if (Files.exists(excludedFile)) {
+                    this.excludedFiles = Set.copyOf(Objects.requireNonNull(
+                            JsonUtils.fromJsonFile(excludedFile, JsonUtils.listTypeOf(String.class))));
+                } else {
+                    this.excludedFiles = null;
+                }
             } catch (Exception e) {
                 LOG.warning("Unable to read CurseForge modpack manifest.json", e);
             }
@@ -113,7 +139,7 @@ public final class CurseCompletionTask extends Task<Void> {
         if (manifest == null)
             return;
 
-        Path root = repository.getInstanceRoot(instanceId);
+        Path root = instance.getInstanceRoot();
 
         // Because in China, Curse is too difficult to visit,
         // if failed, ignore it and retry next time.
@@ -124,7 +150,10 @@ public final class CurseCompletionTask extends Task<Void> {
                             if (StringUtils.isBlank(file.fileName()) || file.url() == null) {
                                 try {
                                     RemoteAddon.File remoteFile = CurseForgeRemoteAddonRepository.MODS.getAddonFile(Integer.toString(file.projectID()), Integer.toString(file.fileID()));
-                                    return file.withFileName(remoteFile.filename()).withURL(remoteFile.url());
+                                    return file
+                                            .withFileName(remoteFile.filename())
+                                            .withURL(remoteFile.url())
+                                            .withHashes(remoteFile.hashes());
                                 } catch (FileNotFoundException fof) {
                                     LOG.warning("Could not query api.curseforge.com for deleted mods: " + file.projectID() + ", " + file.fileID(), fof);
                                     notFound.set(true);
@@ -138,16 +167,22 @@ public final class CurseCompletionTask extends Task<Void> {
                                 return file;
                             }
                         })
-                        .collect(Collectors.toList()));
+                        .toList());
         JsonUtils.writeToJsonFile(root.resolve("manifest.json"), newManifest);
+        if (excludedFiles != null) {
+            JsonUtils.writeToJsonFile(
+                    root.resolve("excluded.json"),
+                    List.copyOf(excludedFiles));
+        }
 
-        Path versionRoot = repository.getInstanceRoot(modManager.getInstanceId());
+        Path versionRoot = instance.getInstanceRoot();
         Path resourcePacksRoot = versionRoot.resolve("resourcepacks");
         Path shaderPacksRoot = versionRoot.resolve("shaderpacks");
         finished.set(0);
         dependencies = newManifest.files()
                 .stream().parallel()
                 .filter(f -> f.fileName() != null)
+                .filter(f -> excludedFiles == null || !excludedFiles.contains(f.key()))
                 .flatMap(f -> {
                     try {
                         Path path = guessFilePath(f, dependency.getDownloadProvider(), resourcePacksRoot, shaderPacksRoot);
@@ -155,10 +190,10 @@ public final class CurseCompletionTask extends Task<Void> {
                             return Stream.empty();
                         }
 
-                        var task = new FileDownloadTask(f.url(), path);
+                        var task = new FileDownloadTask(f.url(), path, f.getIntegrityCheck());
                         task.setCacheRepository(dependency.getCacheRepository());
                         task.setCaching(true);
-                        return Stream.of(task.withCounter("hmcl.modpack.download"));
+                        return Stream.<Task<?>>of(task.withCounter("hmcl.modpack.download"));
                     } catch (IOException e) {
                         LOG.warning("Could not query api.curseforge.com for mod: " + f.projectID() + ", " + f.fileID(), e);
                         return Stream.empty(); // Ignore this file.
@@ -166,7 +201,7 @@ public final class CurseCompletionTask extends Task<Void> {
                         updateProgress(finished.incrementAndGet(), newManifest.files().size());
                     }
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         if (!dependencies.isEmpty()) {
             getProperties().put("total", dependencies.size());
@@ -174,17 +209,15 @@ public final class CurseCompletionTask extends Task<Void> {
         }
     }
 
-    /**
-     * Guess where to store the file.
-     *
-     * @param file              The file.
-     * @param downloadProvider
-     * @param resourcePacksRoot ./resourcepacks.
-     * @param shaderPacksRoot   ./shaderpacks.
-     * @return ./resourcepacks/$filename or ./shaderpacks/$filename or ./mods/$filename if the file doesn't exist. null if the file existed.
-     * @throws IOException If IOException was encountered during getting data from CurseForge.
-     */
-    private Path guessFilePath(CurseManifestFile file, DownloadProvider downloadProvider, Path resourcePacksRoot, Path shaderPacksRoot) throws IOException {
+    /// Returns the destination for a missing CurseForge file based on its project class.
+    ///
+    /// @param file              the manifest file
+    /// @param downloadProvider  the download provider used for CurseForge requests
+    /// @param resourcePacksRoot the resource-pack directory
+    /// @param shaderPacksRoot   the shader-pack directory
+    /// @return the destination, or `null` when the file already exists
+    /// @throws IOException if CurseForge metadata cannot be read
+    private @Nullable Path guessFilePath(CurseManifestFile file, DownloadProvider downloadProvider, Path resourcePacksRoot, Path shaderPacksRoot) throws IOException {
         RemoteAddon mod = CurseForgeRemoteAddonRepository.MODS.getAddonById(downloadProvider, Integer.toString(file.projectID()));
         int classID = ((CurseForgeRemoteAddonRepository.CurseAddon) mod.data()).classId();
         String fileName = file.fileName();
